--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div>
+  <p>home works!</p>
+  <p>This is Normal value {{ counter() }}</p>
+  <p>This is Signal value {{ value }}</p>
+  <app-counter></app-counter>
+
+  <p></p>
+  <input placeholder="Type something..." type="text" [(ngModel)]="inputValue" />
+  <p>{{ inputValue }}</p>
+</div>
