Todo list + Routing

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     <h3>Angular Demo</h3>
   </div>
   <div class="nav-items">
-    <button mat-button>Home</button>
+    <button mat-button routerLink="/">Home</button>
+    <button mat-button routerLink="/todos">Todos</button>
     <button mat-button>About</button>
-    <button mat-button>Careers</button>
   </div>
 </header>
