Game page added

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,6 @@
   <div class="nav-items">
     <button mat-button routerLink="/">Home</button>
     <button mat-button routerLink="/todos">Todos</button>
-    <button mat-button>About</button>
+    <button mat-button routerLink="/games">Games</button>
   </div>
 </header>
