--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,17 @@
 <header>
   <div>
-    <h3>Angular Demo</h3>
+    <h3 routerLink="/" style="cursor: pointer">Angular Demo</h3>
   </div>
   <div class="nav-items">
     <button mat-button routerLink="/">Home</button>
     <button mat-button routerLink="/todos">Todos</button>
     <button mat-button routerLink="/games">Games</button>
+    @if(isHomePage()){
+    <button mat-button routerLink="/games">
+      <mat-icon [matBadge]="cartItems.length" matBadgeOverlap="false"
+        >shopping_cart</mat-icon
+      >
+    </button>
+    }
   </div>
 </header>
