--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -6,7 +6,7 @@
         <th mat-header-cell *matHeaderCellDef>
           {{ column.toLocaleUpperCase() }}
         </th>
-        @if(column === 'action'){
+        @if(customCellColumns().includes(column)){
         <td mat-cell *matCellDef="let element">
           <ng-container
             *ngTemplateOutlet="
