--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,4 +17,8 @@
   <ng-template #actionTemplate let-row>
     <button mat-button (click)="handleBuy(row)">+Cart</button>
   </ng-template>
+
+  <ng-template #imageTemplate let-row>
+    <img [src]="row.image" height="50" width="50" style="padding: 8px" />
+  </ng-template>
 </div>
