--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -27,6 +27,7 @@
         mat-row
         *matRowDef="let row; columns: displayedColumns"
         class="mat-row"
+        appHighlight
       ></tr>
     </table>
     @if (isLoading()) {
