sorting added to table

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,9 +1,9 @@
 <div>
   <div class="table-container mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" class="table">
+    <table mat-table [dataSource]="dataSource" class="table" matSort>
       @for (column of displayedColumns; track $index) {
       <ng-container [matColumnDef]="column" class="con">
-        <th mat-header-cell *matHeaderCellDef>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ column.toLocaleUpperCase() }}
         </th>
         @if(customCellColumns().includes(column)){
