--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <main class="main">
   <app-header></app-header>
-  <router-outlet />
+  <div class="h-[calc(100vh-4rem)] p-[2rem]">
+    <router-outlet />
+  </div>
 </main>
