--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
-<header>
+<header class="h-[4rem]">
   <div>
-    <h3 routerLink="/" style="cursor: pointer">Angular Demo</h3>
+    <h3 routerLink="/" class="text-xl font-bold cursor-pointer">
+      Angular Demo
+    </h3>
   </div>
   <div class="nav-items">
     <button mat-button routerLink="/">Home</button>
