--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="h-[100%]">
   <!-- <p>home works!</p>
   <p>This is Normal value {{ counter() }}</p>
   <p>This is Signal value {{ value }}</p>
