--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,8 +1,10 @@
-<div>
-  <div class="table-container mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" class="table" matSort>
+<div class="relative h-[100%]">
+  <div
+    class="mat-elevation-z8 relative h-[calc(100%-3.6rem)] overflow-y-scroll border border-1"
+  >
+    <table mat-table [dataSource]="dataSource" class="relative" matSort>
       @for (column of displayedColumns; track $index) {
-      <ng-container [matColumnDef]="column" class="con">
+      <ng-container [matColumnDef]="column">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ column.toLocaleUpperCase() }}
         </th>
@@ -16,7 +18,9 @@
           ></ng-container>
         </td>
         }@else {
-        <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+        <td mat-cell *matCellDef="let element">
+          {{ element[column] }}
+        </td>
         }
       </ng-container>
       }
@@ -49,6 +53,7 @@
     [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons
     aria-label="Select page of periodic elements"
+    class="absolute bottom-0 left-0 right-0 border border-1 border-t-0"
   >
   </mat-paginator>
 </div>
