--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,14 +1,19 @@
-<div class="container">
-  <mat-card class="card">
-    <h3>Tic Tac Toe</h3>
+<div class="flex justify-center">
+  <mat-card class="h-[30rem] w-[30rem] p-4">
+    <h3 class="text-xl font-bold text-center py-4">Tic Tac Toe</h3>
+
     @if (winner) {
-    <h4>Winner: {{ winner }}</h4>
+    <h4 class="text-lg font-bold text-center text-green-400">
+      Winner: {{ winner }}
+    </h4>
     } @else {
-    <h4>Current Player: {{ currentPlayer }}</h4>
+    <h4 class="text-lg font-bold text-center text-red-300">
+      Current Player: {{ currentPlayer }}
+    </h4>
     }
-    <div class="board">
+    <div class="p-4">
       @for (row of board; track $index; let rowIndex = $index) {
-      <div class="row">
+      <div class="flex justify-center">
         @for (cell of row; track $index; let colIndex = $index) {
         <button
           mat-raised-button
@@ -22,7 +27,7 @@
       </div>
       }
     </div>
-    <div class="row">
+    <div class="flex justify-center">
       <button mat-raised-button color="accent" (click)="resetGame()">
         Reset
       </button>
