--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,21 +1,19 @@
-<div class="container">
-  <div style="display: flex; justify-content: space-between">
-    <h3>Todos</h3>
+<div class="">
+  <div class="flex justify-between">
+    <h3 class="text-2xl font-bold">Todos</h3>
     <button mat-flat-button (click)="openAddDialog()">+ Add Todo</button>
   </div>
-  <div class="todo-container">
+  <div class="overflow-y-auto h-[75vh]">
     @for (todo of todos(); track $index) {
     <app-todo-item [todo]="todo" (onEditClick)="openEditDialog($event)" />
     }
   </div>
 
   <ng-template #todoFormTemplate let-data>
-    <div class="form">
-      @if(isEditingMode()){
-      <h3>Edit Todo</h3>
-      }@else {
-      <h3>Add Todo</h3>
-      }
+    <div class="flex flex-col">
+      <div class="text-xl font-bold pb-4 text-center">
+        @if(isEditingMode()){ Edit Todo }@else { Add Todo }
+      </div>
       <mat-form-field>
         <mat-label>Title</mat-label>
         <input matInput [formControl]="title" maxlength="20" />
