--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,21 +1,37 @@
-<div class="flex items-center gap-3 text-lg">
-  <input
-    type="checkbox"
-    [checked]="todo().done"
-    (change)="toggleTodo(todo())"
-  />
-  <div class="flex items-center">
-    <p [class]="{ 'line-through': todo().done }">
-      {{ todo().title }} | <span>{{ todo().description }}</span> |
-      <span>{{ todo().dueDate | date : "shortDate" }}</span> |
-      <span>{{ todo().dueTime | date : "shortTime" }}</span>
-      | <span>{{ todo().email }}</span>
+<mat-card
+  class="flex flex-col justify-between shadow-lg mb-4 rounded-lg border border-gray-200 h-[18rem]"
+>
+  <mat-card-header
+    class="flex justify-between items-center border-b border-gray-300 pb-2 mb-4"
+  >
+    <mat-card-title
+      class="text-xl font-semibold w-[12rem] truncate"
+      [class.line-through]="todo().done"
+    >
+      {{ todo().title }}
+    </mat-card-title>
+    <mat-checkbox
+      [checked]="todo().done"
+      (change)="toggleTodo(todo())"
+      class="text-blue-500"
+    ></mat-checkbox>
+  </mat-card-header>
+
+  <mat-card-content>
+    <p class="text-gray-700 mb-2">
+      <strong>Description:</strong> {{ todo().description }}
     </p>
-    <button mat-icon-button (click)="editTodo(todo())">
-      <mat-icon fontIcon="edit"></mat-icon>
-    </button>
-    <button mat-icon-button (click)="deleteTodo(todo())">
-      <mat-icon fontIcon="delete"></mat-icon>
-    </button>
-  </div>
-</div>
+    <p class="text-gray-700 mb-2">
+      <strong>Due Date:</strong> {{ todo().dueDate | date : "fullDate" }}
+    </p>
+    <p class="text-gray-700 mb-4">
+      <strong>Due Time:</strong> {{ todo().dueTime | date : "shortTime" }}
+    </p>
+    <p class="text-gray-700"><strong>Email:</strong> {{ todo().email }}</p>
+  </mat-card-content>
+
+  <mat-card-actions class="flex justify-end">
+    <button mat-button color="primary" (click)="editTodo(todo())">Edit</button>
+    <button mat-button color="warn" (click)="deleteTodo(todo())">Delete</button>
+  </mat-card-actions>
+</mat-card>
