--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,9 +1,9 @@
 <div class="">
-  <div class="flex justify-between">
+  <div class="flex justify-between pb-4">
     <h3 class="text-2xl font-bold">Todos</h3>
     <button mat-flat-button (click)="openAddDialog()">+ Add Todo</button>
   </div>
-  <div class="overflow-y-auto h-[75vh]">
+  <div class="grid lg:grid-cols-3 gap-4 overflow-y-auto h-[75vh]">
     @for (todo of todos(); track $index) {
     <app-todo-item [todo]="todo" (onEditClick)="openEditDialog($event)" />
     }
