--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main">
   <app-header></app-header>
-  <div class="h-[calc(100vh-4rem)] p-[2rem]">
+  <div class="h-[calc(100vh-4rem)] px-[7rem] py-[1rem]">
     <router-outlet />
   </div>
 </main>
